--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
-bin_PROGRAMS = hpl_ai
+bin_PROGRAMS = hpl-ai
 
 include_HEADERS = hpl-ai.h
 
 hpl_ai_SOURCES =  \
-print.c matgen.c sgetrf_nopiv.c convert.c blas.c gmres.c timer.c hpl_ai.c
+print.c matgen.c sgetrf_nopiv.c convert.c blas.c gmres.c timer.c hpl-ai.c
