--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,9 @@
-bin_PROGRAMS = hpl-ai
+bin_PROGRAMS = hpl-ai tstnum
 
 include_HEADERS = hpl-ai.h
 
 hpl_ai_SOURCES =  \
 print.c matgen.c sgetrf_nopiv.c convert.c blas.c gmres.c timer.c hpl-ai.c
+
+tstnum_SOURCES = \
+print.c matgen.c sgetrf_nopiv.c sgetrf_nopiv_cpu.c convert.c blas.c gmres.c timer.c tstnum.c
